--- a/main.tex
+++ b/main.tex
@@ -268,11 +268,7 @@ sizes for extant and ancestral species. However by default StarBEAST2
 analytically integrates over population sizes which is faster than making
 explicit estimates. If you do need to estimate population sizes, change the
 population model to \textbf{Constant Populations}. For this tutorial, keep the
-default model which is \textbf{Analytical Population Size Integration}. In order to improve
-convergence of the MCMC chain, set the population size mean to 0.003 and uncheck
-the option to estimate this value (Figure~\ref{fig:pop}). \textcolor{red}{For
-real analyses you should almost certainly estimate this value, but a fixed value
-will help us complete the tutorial in a reasonable time frame.}
+default model which is \textbf{Analytical Population Size Integration}.
 
 \begin{figure}[htb!]
 \centering
@@ -366,8 +362,8 @@ complete before stopping an MCMC chain. The appropriate length of the chain
 depends on the size of the data set, the complexity of the model and on the
 accuracy of the answer required. The default value of 10,000,000 is entirely
 arbitrary and should be adjusted according to the size of your data set. For
-this tutorial keep the default chain length, which should finish within 20
-to 30 minutes on a modern computer (Figure~\ref{fig:mcmc}).
+this tutorial keep the default chain length, which should finish within 10
+to 20 minutes on a modern computer (Figure~\ref{fig:mcmc}).
 
 \begin{figure}[htb!]
 \centering
@@ -414,49 +410,50 @@ like this:
 
 {\scriptsize
 \begin{verbatim}
-                   BEAST v2.4.3 Prerelease, 2002-2016
+                   BEAST v2.4.5 Prerelease, 2002-2016
              Bayesian Evolutionary Analysis Sampling Trees
                        Designed and developed by
  Remco Bouckaert, Alexei J. Drummond, Andrew Rambaut & Marc A. Suchard
 ...
 
          Sample      posterior ESS(posterior)     likelihood          prior
-              0     -9462.6137              N    -10189.1746       -49.6988 --
-           5000     -9385.6106         2.0       -10010.6403       -26.3203 --
+              0    -10073.1177              N    -10189.1746       -45.5630 --
+           5000     -9577.5483         2.0        -9954.8872       -13.0309 --
 ...
 
-        9995000     -9101.9036       998.4        -9807.8587       -20.1634 1m57s/Msamples
-       10000000     -9120.5011       999.6        -9820.1012       -23.5461 1m57s/Msamples
+        9995000     -9108.4194       647.2        -9813.0864        -3.5710 51s/Msamples
+       10000000     -9103.9109       647.7        -9815.5796        -9.9556 51s/Msamples
 
 Operator                                                                Tuning    #accept    #reject      Pr(m)  Pr(acc|m)
-ScaleOperator(branchRateScaler.Species)                                 0.1764      44970     119601     0.0164     0.2733 
-BitFlipOperator(indicatorFlipper.Species)                                    -       3242      78885     0.0082     0.0395 
-NodeReheight(Reheight.t:Species)                                             -      88386     596000     0.0685     0.1291 
-starbeast2.CoordinatedUniform(coordinatedUniform.t:Species)                  -      49238      87613     0.0137     0.3598 
-starbeast2.CoordinatedExponential(coordinatedExponential.t:Species)     0.0024      46894      90442     0.0137     0.3415 
-ScaleOperator(TreeScaler.t:Species)                                     0.9717       5829      21463     0.0027     0.2136 
-ScaleOperator(TreeRootScaler.t:Species)                                 0.6680       5341      21908     0.0027     0.1960 
-Uniform(UniformOperator.t:Species)                                           -      15811     121214     0.0137     0.1154 
-SubtreeSlide(SubtreeSlide.t:Species)                                    0.0012      24270     111965     0.0137     0.1781 
-Exchange(Narrow.t:Species)                                                   -      13725     123242     0.0137     0.1002 
-Exchange(Wide.t:Species)                                                     -       1620     135249     0.0137     0.0118 
-WilsonBalding(WilsonBalding.t:Species)                                       -        455     136871     0.0137     0.0033 
-UpDownOperator(updown.all.Species)                                      0.4177      14847      39909     0.0055     0.2711 
-ScaleOperator(clockRateScaler.c:64)                                     0.5266       8901      29944     0.0038     0.2291 
-UpDownOperator(clockUpDownOperator.c:64)                                0.9097      10820      27497     0.0038     0.2824 
-ScaleOperator(TreeScaler.t:64)                                          0.9146      10571      27821     0.0038     0.2753 
-ScaleOperator(TreeRootScaler.t:64)                                      0.4977       7532      30987     0.0038     0.1955 
-Uniform(UniformOperator.t:64)                                                -      93357      97911     0.0192     0.4881 
-SubtreeSlide(SubtreeSlide.t:64)                                         0.0040      31114     160448     0.0192     0.1624 
-Exchange(Narrow.t:64)                                                        -      51189     139889     0.0192     0.2679 
-Exchange(Wide.t:64)                                                          -       2512     189065     0.0192     0.0131 
-WilsonBalding(WilsonBalding.t:64)                                            -       2440     189974     0.0192     0.0127 
+ScaleOperator(popMeanScale.Species)                                     0.3812       3583       8190     0.0012     0.3043 
+ScaleOperator(branchRateScaler.Species)                                 0.1723      56881     156125     0.0213     0.2670 
+BitFlipOperator(indicatorFlipper.Species)                                    -       4242     101781     0.0106     0.0400 
+starbeast2.NodeReheight2(Reheight.t:Species)                                 -     124045     761693     0.0886     0.1400 
+starbeast2.CoordinatedUniform(coordinatedUniform.t:Species)                  -      63702     114019     0.0177     0.3584 
+starbeast2.CoordinatedExponential(coordinatedExponential.t:Species)     0.0028      60245     116930     0.0177     0.3400 
+ScaleOperator(TreeScaler.t:Species)                                     0.9615       5514      29691     0.0035     0.1566 
+ScaleOperator(TreeRootScaler.t:Species)                                 0.6990       8246      27291     0.0035     0.2320 
+Uniform(UniformOperator.t:Species)                                           -      21992     155918     0.0177     0.1236 
+SubtreeSlide(SubtreeSlide.t:Species)                                    0.0019      24596     152409     0.0177     0.1390 
+Exchange(Narrow.t:Species)                                                   -      18270     159466     0.0177     0.1028 
+Exchange(Wide.t:Species)                                                     -       2363     174072     0.0177     0.0134 
+WilsonBalding(WilsonBalding.t:Species)                                       -        685     176237     0.0177     0.0039 
+UpDownOperator(updown.all.Species)                                      0.3839      19511      51365     0.0071     0.2753 
+ScaleOperator(clockRateScaler.c:59)                                     0.4593       7996      28057     0.0035     0.2218 
+UpDownOperator(clockUpDownOperator.c:59)                                0.7573       8155      27221     0.0035     0.2305 
+ScaleOperator(TreeScaler.t:59)                                          0.7809       8030      27602     0.0035     0.2254 
+ScaleOperator(TreeRootScaler.t:59)                                      0.3936       8495      26738     0.0035     0.2411 
+Uniform(UniformOperator.t:59)                                                -     101539      75250     0.0177     0.5744 
+SubtreeSlide(SubtreeSlide.t:59)                                         0.0064      27799     149206     0.0177     0.1571 
+Exchange(Narrow.t:59)                                                        -      90635      86420     0.0177     0.5119 
+Exchange(Wide.t:59)                                                          -       5767     171547     0.0177     0.0325 
+WilsonBalding(WilsonBalding.t:59)                                            -       6033     171715     0.0177     0.0339 
 ...
 
-ScaleOperator(KappaScaler.s:26)                                         0.3459       3993       8772     0.0013     0.3128 
+ScaleOperator(KappaScaler.s:59)                                         0.2986       3401       8449     0.0012     0.2870 
 ...
 
-DeltaExchangeOperator(FrequenciesExchanger.s:47)                        0.0907       3578      15709     0.0019     0.1855 
+DeltaExchangeOperator(FrequenciesExchanger.s:59)                        0.0990       3902      13818     0.0018     0.2202 
 ...
 
      Tuning: The value of the operator's tuning parameter, or '-' if the operator can't be optimized.
@@ -465,9 +462,7 @@ DeltaExchangeOperator(FrequenciesExchanger.s:47)                        0.0907  
       Pr(m): The probability this operator is chosen in a step of the MCMC (i.e. the normalized weight).
   Pr(acc|m): The acceptance probability (#accept as a fraction of the total proposals for this operator).
 
-
-Total calculation time: 1180.325 seconds
-End likelihood: -9120.501194044526
+End likelihood: -9103.910915654225
 \end{verbatim}}
 
 \section{Analyzing the results}
