--- a/master-refs.bib
+++ b/master-refs.bib
@@ -113,7 +113,7 @@
 author = {Bouckaert, Remco AND Heled, Joseph AND K\"uhnert, Denise AND Vaughan, Tim AND Wu, Chieh-Hsi AND Xie, Dong AND Suchard, Marc A. AND Rambaut, Andrew AND Drummond, Alexei J.},
 journal = {PLoS Computational Biology},
 publisher = {Public Library of Science},
-title = {{BEAST} 2: A Software Platform for {Bayesian} Evolutionary Analysis},
+title = {BEAST 2: A Software Platform for {Bayesian} Evolutionary Analysis},
 year = {2014},
 month = {04},
 volume = {10},
@@ -140,11 +140,9 @@ journal = {Molecular Biology and Evolution}
 
 @article{belfiore2008multilocus,
 	Author = {Belfiore, N.M. and Liu, L. and Moritz, C.},
-	Date-Added = {2012-04-15 21:37:34 +0000},
-	Date-Modified = {2012-04-15 21:37:34 +0000},
 	Journal = {Systematic Biology},
 	Number = {2},
 	Pages = {294},
-	Title = {{Multilocus phylogenetics of a rapid radiation in the genus \textit{Thomomys} (Rodentia: Geomyidae)}},
+	Title = {Multilocus phylogenetics of a rapid radiation in the genus Thomomys (Rodentia: Geomyidae)},
 	Volume = {57},
 	Year = {2008}}
